Fix header align items - Fix card margin

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@ body {
 *********************************/
 
 .debug header {
-    height: 80px;
     background-color: purple;
+}
+
+.debug .topbar {
+    height: 80px;
 }
 
 .debug .box-1 {
